--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>HIGH & LOW</title>
+   
 </head>
 <body>
-    
+    <div class="container">
+        <div id="field-card">見えているカード：</div>
+        <div id="my-card">あなたのカード：</div>
+        <input type="button" value="自分のカードの方が大きい" onclick="judge(true);"/>
+        <input type="button" value="自分のカードの方が小さい" onclick="judge(false);"/>
+        <div id="result-field"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
