--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div id="field-card">見えているカード：</div>
-        <div id="my-card">あなたのカード：</div>
+        <div id="card-field">
+            <span id="field-card"></span>
+            <span id="my-card"></span>
+        </div>
+        <div id="judge-button">
         <input type="button" value="自分のカードの方が大きい" onclick="judge(true);"/>
         <input type="button" value="自分のカードの方が小さい" onclick="judge(false);"/>
+        </div>
         <div id="result-field"></div>
+        <div id="round-result-field"></div>
+        <div id="restart-button">
+            <input type="button" value="次へ進む" onclick="restart();"/>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
