結果表示を変える

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <input type="button" value="自分のカードの方が小さい" onclick="judge(false);"/>
         </div>
         <div id="result-field"></div>
-        <div id="round-result-field"></div>
         <div id="restart-button">
             <input type="button" value="次へ進む" onclick="restart();"/>
         </div>
+        <div id="final-result-field"></div>
     </div>
     <script src="script.js"></script>
 </body>
