--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div>
-           <img class="card" src=card/back.png id="left" />
-           <img class="card" src=card/back.png id="right" />
+        <div class="lineup">
+           <img src=card/back.png id="left" />
+           <img src=card/back.png id="right" />
         </div>
-        <div id="judge-html">
+        <div id="judge-html" class="lineup">
             <input class="button" type="button" value="右のカードの方が大きい" onclick="judge(true);"/>
             <input class="button" type="button" value="右のカードの方が小さい" onclick="judge(false);"/>
         </div>
