https://github.com/progedu/coding_3/issues/6

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <input class="button" type="button" value="右のカードの方が↑" onclick="judge(true);"/>
                 <input class="button" type="button" value="右のカードの方が↓" onclick="judge(false);"/>
             </div>     
-            <div id="result-html">結果：0勝0敗</div>
+            <div id="result-html"></div>
         <div id="restart-html">
             <input class="button" type="button" value="次へ進む" onclick="restart();"/>
         </div>
-        <div id="result-list-html"></div>
+        <div>結果：<span id="result-list-html"></span></div>
     </div>
     <script src="script.js"></script>
 </body>
